refactor(racingcar): 테스트 로직 수정 및 어노테이션 위치 수정